2nd init commit